project/manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    namespace: project
    name: project-backend-dep
spec:
    replicas: 1
    selector:
        matchLabels:
            app: project-backend
    template:
        metadata:
            labels:
                app: project-backend
        spec:
            volumes: # Define volume
                - name: shared-image
                  persistentVolumeClaim:
                      claimName: image-claim
            containers:
                - name: project-backend
                  image: nikogenix/project-backend:v0.2
                  resources:
                      limits:
                          memory: 512Mi
                          cpu: "1"
                  volumeMounts: # Mount volume
                      - name: shared-image
                        mountPath: /usr/src/app/files
