project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: project
spec:
    replicas: 1
    selector:
        matchLabels:
            app: project
    template:
        metadata:
            labels:
                app: project
        spec:
            volumes: # Define volume
                - name: shared-image
                  persistentVolumeClaim:
                      claimName: image-claim
            containers:
                - name: project
                  image: nikogenix/project:v0.6
                  resources:
                      limits:
                          memory: 512Mi
                          cpu: "1"
                  volumeMounts: # Mount volume
                      - name: shared-image
                        mountPath: /usr/src/app/files
