project/manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    namespace: project
    name: project-frontend-dep
spec:
    replicas: 1
    selector:
        matchLabels:
            app: project-frontend
    template:
        metadata:
            labels:
                app: project-frontend
        spec:
            containers:
                - name: project-frontend
                  image: nikogenix/project:v0.10
                  resources:
                      limits:
                          memory: 512Mi
                          cpu: "1"
