project/manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: project-backend-svc
spec:
    type: ClusterIP
    selector:
        app: project-backend
    ports:
        - name: project-backend
          port: 3022
          protocol: TCP
          targetPort: 4000
