project/manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: project-frontend-svc
spec:
    type: ClusterIP
    selector:
        app: project-frontend
    ports:
        - name: project-frontend
          port: 3021
          protocol: TCP
          targetPort: 3000
